# pathnorm_toolkit

./: AUTHORS  LICENSE  NOTICE.md  README.md  ok_models.json  pyproject.toml
results/1_compute_pretrained_pathnorm_margins_resnets/resnet101/: pathnorms.pt
results/1_compute_pretrained_pathnorm_margins_resnets/resnet152/: pathnorms.pt
results/1_compute_pretrained_pathnorm_margins_resnets/resnet18/: pathnorms.pt
results/1_compute_pretrained_pathnorm_margins_resnets/resnet34/: pathnorms.pt
results/1_compute_pretrained_pathnorm_margins_resnets/resnet50/: pathnorms.pt
results/2_train_imp/seed=0/resnet18/lr=0.1_wd=0.0001_epochs=90_scheduler=multi-step_percentage_pruning=0.2_imp_iters=20/rank=-1/csv/: results.csv
results/4_train_increasing_dataset/seed=0/resnet18/size_dataset=158544/lr=0.1_wd=0.0001_epochs=90_scheduler=multi-step_percentage_pruning=_imp_iters=0/rank=-1/csv/: results.csv
scripts/: 0_compute_1st_part_bound_resnets.sh  1_compute_pretrained_pathnorm_margins_resnets.sh  2_train_imp.sh  3_plot_imp.sh  4_train_increasing_dataset.sh  5_plot_increasing_dataset.sh  check_models.py  compute_path_norm_models.py
src/pathnorm/: plot_imp.py  plot_increasing_dataset.py  train_imagenet.py
src/pathnorm/IMP/: imp.py
src/pathnorm/dataset/: imagenet.py
src/pathnorm/optim/: scheduler.py
src/pathnorm/path_norm/: compute_1st_part_bound_resnets.py  compute_margin.py  compute_path_norm.py  pathnorm_and_margins_pretrained_resnets.py
src/pathnorm/utils/: evaluate_accuracy.py  log_and_checkpoint.py  meters.py  mixup.py  parse_arguments.py
(+14 files in other folders)
